--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 	<title>Paginita</title>
 </head>
 <body>
-	<h1>Hola mi primera web</h1>
+    <nav class="menu">
+    	<div class="imagen">
+    	<img src="https://img2.freepng.es/20180415/jdw/kisspng-logo-silhouette-dog-bone-dog-5ad41d4b59e7d5.7560651515238505713683.jpg" alt="logo de un perro">
+    	</div>
+    	<div class="enlaces">
+      		<a href="">Razas</a>
+      		<a href="">Tabla De Razas</a>
+      		<a href="">Terranova</a>
+      	</div>
+        <nav>
+        <form action="">
+            <label for="usuario" required minlenght="3" maxlenght="20">Usuario: </label>
+            <input id="usuario" name="usuario" type="text" required minlength="3" maxlength="20">
+            <label for="pass">Contraseña: </label>
+            <input id="pass" name="pass" required minlength="7" type="password">
+            <button type="submit">Enviar</button>
+        </form>
+        </nav>
+    </nav>
+    </div>
 </body>
 </html>
