--- a/index.html
+++ b/index.html
@@ -115,7 +115,24 @@
     			<td>Leonberger</td>
     			<td>75Kg</td>
     			<td>80cm</td>
-    			<td></td>
+    			<td>Son perros de montaña, musculosos y de temperamento equilibrado, además son muy tranquilos. Aunque necesita ejercicio diario es una raza muy perezosa, por lo que tendremos que motivarlos a salir. También necesita cepillados diarios, odian la soledad y estar atados y aman correr y moverse libres.</td>
+    			<td>El origen de esta raza se remonta al siglo XIX, y deriva de cruces de razas de gran tamaño como el San Bernardo o el Gran Pirineo.</td>
+    			<td>Foto</td>
+    		</tr>
+    		<tr>
+    			<td>Bullmastiff</td>
+    			<td>60Kg</td>
+    			<td>70 cm</td>
+    			<td>Su necesidad de actividad es moderada y es bastante obediente en cuanto a órdenes y códigos de conducta y es un perro muy familiar. Además esta raza destaca por su carácter de perro gurdián y por ser muy inteligentes.</td>
+    			<td>Su origen es británico y está emparentado con el mastín y con el bulldog inglés. Es una raza con cierta tendencia a la obesidad por lo que es muy importante cuidar su alimentación. Mantener su higiene es muy sencillo ya que solo requiere cepillarlo un par de meses a la semana y bañarlo mensualmente. </td>
+    			<td>Foto</td>
+    		</tr>
+    		<tr>
+    			<td>Tosa Inu</td>
+    			<td>Hasta 100Kg</td>
+    			<td>Más de 60cm</td>
+    			<td>Los perros pertenecientes a esta raza tiene un carácter muy reservado y callado y son muy pacientes y fieles, a pesar de esto, necesitan dueños experimentados para ayudarle y enseñarle a socializar, ya que suelen ser muy agresivos con otros perros si no se realiza este proceso correctamente.</td>
+    			<td>El origen de esta raza se encuentra en Japón. También es una de las razas de perros grandes favoritas a nivel mundial. Esta raza surge a mediados del siglo XIX, a consecuencia del cruce de razas como el gran danés, el mastín o el bulldog y se utilizaban como perros de peleas y para protección, de ahí que tengan un carácter tan agresivo. </td>
     		</tr>
     	</tbody>
     </table>
