--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     			<td>Más de 60cm</td>
     			<td>Los perros pertenecientes a esta raza tiene un carácter muy reservado y callado y son muy pacientes y fieles, a pesar de esto, necesitan dueños experimentados para ayudarle y enseñarle a socializar, ya que suelen ser muy agresivos con otros perros si no se realiza este proceso correctamente.</td>
     			<td>El origen de esta raza se encuentra en Japón. También es una de las razas de perros grandes favoritas a nivel mundial. Esta raza surge a mediados del siglo XIX, a consecuencia del cruce de razas como el gran danés, el mastín o el bulldog y se utilizaban como perros de peleas y para protección, de ahí que tengan un carácter tan agresivo. </td>
+    			<td>foto</td>
     		</tr>
     	</tbody>
     </table>
