--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yellowtail&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="Estilos/Estilos.css">
-	<title>Paginita</title>
+	<link rel="shortcut icon" href="Img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="Img/favicon.ico" type="image/x-icon">
+	<title>Razas Grandes</title>
 </head>
 <body>
     <header>
